# universal-loader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
runs/: run.py
src/: cleaner.py  config.py  loader.py  log.py  validator.py
