[project]
name = "universal-loader"
version = "0.1.0"
description = ""
authors = [
    {name = "vini-bgs",email = "viniciustheros@gmail.com"}
]
requires-python = ">=3.11, <4.0"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.poetry]
package-mode = false
